# QCrBoxAPIClient

./: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml
.github/scripts/: check_qcb_healthy.sh
.github/workflows/: build_docs.yml  documentation.yml  run_tests.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  quickstart.rst
examples/: check_structure_convergence.py  create_dataset.py  invoke_interactive.py  invoke_non-interactive.py
qcrboxapiclient/: __init__.py
qcrboxapiclient/models/: __init__.py  api_data_files_create_data_file_the_file_to_upload.py  api_datasets_create_dataset_the_file_contents_to_upload.py  append_to_dataset_body.py  application_spec_with_commands.py  application_spec_with_commands_response.py  applications_response.py  calculation_nats_response_model.py  (+70 more)
robot_tests/: 01_client.robot  02_endpoints_admin.robot  03_endpoints_applications.robot  04_endpoints_commands.robot  05_endpoints_data_files.robot  05_endpoints_datasets.robot  06_endpoints_data_files.robot  06_endpoints_datasets.robot  07_endpoints_interactive_sessions.robot  08_endpoints_calculations.robot  08_endpoints_non_interactive_commands.robot  09_endpoints_calculations.robot  client.robot  endpoints_admin.robot  endpoints_applications.robot  endpoints_calculations.robot  endpoints_data_files.robot  endpoints_datasets.robot  endpoints_interactive_sessions.robot
scripts/: generate-api-reference.py  generate-client.sh
templates/: .gitignore.jinja  README.md.jinja  pyproject.toml.jinja  pyproject_ruff.toml.jinja
tests/: test.py
(+142 files in other folders)
