[tool.poetry]
name = "QCrBoxAPIClient"
version = "0.2.2"
description = "A client library for accessing QCrBox"
authors = []
readme = "README.md"
packages = [
    {include = "qcrboxapiclient"},
]
include = ["CHANGELOG.md", "qcrboxapiclient/py.typed"]


[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.20.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.2.0"
furo = "^2024.8.6"
ruff = "^0.11.10"
robotframework = "^7.2.2"
robotframework-tidy = "^4.17.0"
openapi-python-client = "^0.24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]